# scitex-orochi

./: .coverage  .gitignore  .mcp.json  .venv  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.stable.yml  docker-compose.yml  eslint.config.js  manage.py  orochi-config.yaml  orochi-machines.yaml  pyproject.toml  pyrightconfig.json  test_connect.py  test_push_from_python.py  tier3-claude-echo  tier3-mock-echo  tier3-ws-bridge
.deepeval/: .deepeval_telemetry.txt
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  pr-ci.yml  pr-stale-sweep.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  release-ci.yml  test.yml
.playwright-cli/: page-2026-04-06T15-37-16-329Z.yml  page-2026-04-06T16-43-02-082Z.yml  page-2026-04-06T17-21-24-041Z.yml  page-2026-04-07T15-44-46-830Z.yml  page-2026-04-07T15-45-37-450Z.yml  page-2026-04-07T15-48-43-887Z.yml  page-2026-04-07T15-49-19-187Z.yml  page-2026-04-07T15-49-49-425Z.yml  page-2026-04-07T16-03-10-017Z.yml  page-2026-04-07T16-03-33-354Z.yml  page-2026-04-07T16-04-40-354Z.yml  page-2026-04-07T16-04-59-640Z.yml  page-2026-04-07T16-05-18-089Z.yml  page-2026-04-07T16-25-28-556Z.yml  page-2026-04-07T16-28-18-733Z.yml  page-2026-04-07T16-31-11-091Z.yml  page-2026-04-07T16-31-32-425Z.yml  page-2026-04-07T16-38-19-920Z.yml  page-2026-04-07T16-44-40-897Z.yml
.scitex/dev/: config.yaml
GITIGNORED/: A2A_PHASE3_PREFLIGHT.md
agents/: head-deploy.yaml  head-general.yaml  head-mba.yaml  head-research.yaml  master.yaml  telegrammer.yaml
apps/hub/: admin.py  apps.py  auto_dispatch.py  channel_acl.py  context_processors.py  liveness.py  mentions.py  middleware.py  push.py  quota_watch.py  routing.py  signals.py  urls.py  urls_bare.py  urls_workspace.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  settings_dev.py  settings_prod.py  settings_shared.py
deployment/: README.md
deployment/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.stable.yml  entrypoint.sh
deployment/fleet/: agent-respawn.sh  cloudflared-watchdog.sh  test_tmux_unstick_stability.sh  tmux-unstick-README.md  tmux-unstick-spartan-loop.sh  tmux-unstick.sh
docs/: a2a-protocol.md  architecture.md  cli-refactor-plan-2026-04-22.md  cli.md  cloudflare-tunnel-config.md  configuration.md  getting-started.md  hardware-requirements.md  reference.md  why-orochi.md  workspace-integration-design.md
docs/adr/: 0002-scitex-django-app-standard.md  0003-agent-identity-and-bridge-shape.md
docs/observability/: drop-detection.md  fleet-health-dashboard.md  subagent-metadata.md  tunnel-health.md
docs/sphinx/: conf.py  index.rst  installation.rst  quickstart.rst
examples/: 01_basic.py  daemons.yaml.example
examples/agents/: README.md  daemon-auditor-haiku.yaml  daemon-stale-pr.yaml  head-deploy.yaml  head-general.yaml  head-mba.yaml  head-research.yaml  master.yaml  telegrammer.yaml
hub/: admin.py  apps.py  auto_dispatch.py  backends.py  channel_acl.py  consumers.py  liveness.py  mentions.py  middleware.py  models.py  push.py  quota_watch.py  registry.py  routing.py  signals.py  terminal_consumers.py  tests.py  urls.py  urls_bare.py  urls_workspace.py  views.py
hub/a2a/: __init__.py  _dispatch_internals.py  auth.py  card.py  executor.py  mount.py
hub/consumers/: __init__.py  _agent.py  _agent_handlers.py  _agent_identity.py  _agent_message.py  _agent_refresh.py  _dashboard.py  _dashboard_message.py  _echo.py  _groups.py  _helpers.py  _persistence.py
hub/frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
hub/migrations/: 0001_initial.py  0002_workspaceinvitation.py  0003_message_sender_type.py  0005_reactions_and_threads.py  0008_agentprofile_health_reason_and_more.py  0009_add_pinned_agent.py  0010_add_agent_color.py  0013_channel_kind.py  0014_pushsubscription.py  0016_scheduled_action.py  0018_channel_preference.py  0019_channel_membership.py  0021_userprofile.py  0026_workspace_icon_image.py  0028_alter_channelmembership_permission.py  0029_channelmembership_can_read_can_write.py  0030_agentprofile_last_auto_dispatch_at.py  0031_add_channel_is_archived.py  0031_agent_snapshot_session.py  0031_channel_is_archived.py  0032_workspacetoken_agent_name.py  (+7 more)
mgmt/: ENHANCEMENT_IDEAS_2026-04-28.md  REVIEWER_COMMENTS_v01.md  REVIEWER_COMMENTS_v02.md  REVIEWER_COMMENTS_v03.md
orochi/: __init__.py  __main__.py  asgi.py  auth.py  cli.py  client.py  config.py  gitea_handler.py  mcp_server.py  models.py  server.py  settings.py  store.py  urls.py  web.py  wsgi.py
plugin/: .mcp.json  README.md
scripts/: bump-version.sh  cloudflare-tunnel-config.md  health-check.sh  poll-agent.py  setup-workspace.sh  start.sh  stop.sh
static/: .gitkeep
templates/: .gitkeep
tests/: conftest.py  test_agent_eval.py  test_auto_dispatch_pick_todo.py  test_caduceus_greeting.py  test_client_subscribe_bits.py  test_consumers_channel_filter.py  test_cron_cli.py  test_cron_config.py  test_cron_daemon.py  test_cron_heartbeat.py  test_daemon_auditor_haiku_audit.py  test_daemon_auditor_haiku_rules.py  test_daemon_auditor_haiku_subscriber.py  test_daemon_stale_pr_check.py  test_daemon_stale_pr_state.py  test_daemon_stale_pr_wrapper.py  test_env_redaction.py  test_health.py  test_heartbeat_field_registry.py  test_host_identity.py  test_hostname_aliases_config.py  test_hungry_signal_counter.py  test_hungry_signal_handler.py  test_machine_metrics_shape.py  test_orochi_slurm_resources.py  test_orochi_subagent_count_lifecycle.py  test_orochi_subagent_count_parse.py  test_orochi_subagent_count_process_tree.py  test_pane_classifier_contradiction.py  test_pkg_audit_script.py  test_push_payload_sac_status.py  test_resolve_machine_label.py  test_resources_aggregation.py  test_sac_status_collect.py  test_server.py  test_skills_quality.py  test_slurm_resources.py  test_subagent_count_lifecycle.py  test_subagent_count_parse.py  test_subagent_count_process_tree.py  (+3 more)
ts/: mcp_channel.ts  orochi_push.ts  package.json
(+1219 files in other folders)
