[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-orochi"
version = "0.16.2"
description = "Agent Communication Hub for the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = ["agent", "communication", "websocket", "hub", "scitex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=5.1",
    "channels>=4.0",
    "channels-redis>=4.2",
    "daphne>=4.0",
    "whitenoise>=6.0",
    "django-allauth[socialaccount]>=65.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "websockets>=12.0",
    "pywebpush>=1.14",
    "py-vapid>=1.9",
    # todo#47 — web-terminal SSH backend. Pure-Python asyncio SSH client
    # so the terminal consumer can stream into fleet hosts without
    # shelling out to the openssh binary.
    "asyncssh>=2.14",
    # A2A SDK — orochi serves the canonical A2A interface at
    # ``/v1/agents/<name>/`` (Phase 3 of GITIGNORED/A2A_MIGRATION.md).
    # The ``[http-server]`` extra pulls in starlette + sse-starlette,
    # which the SDK's route factories require for JSON-RPC + streaming.
    "a2a-sdk[http-server]>=1.0.2",
    # protobuf 6.x removed FieldDescriptor.label, which a2a-sdk 1.0.x's
    # validate_proto_required_fields still references — pin until
    # upstream adopts the descriptor pool API. The previous pin <7 was
    # misleadingly named: the bug is in 6.x, so <7 still allowed broken
    # resolutions on fresh installs. Same fix shipped in
    # scitex-agent-container/pyproject.toml 2026-04-27.
    "protobuf<6",
    # Maintained vendor-prefix detectors (GitHub, AWS, Slack, Anthropic,
    # OpenAI, JWT, Stripe, ...) used by the .env viewer's redaction
    # pipeline (`scripts/client/_collect_agent_metadata/_files.py`).
    # Replaces the hand-rolled vendor-prefix list so the catalog
    # tracks upstream when vendors change token formats. The library's
    # high-entropy plugins are explicitly skipped — see _files.py.
    "detect-secrets>=1.5",
    # Cross-platform machine metrics (cpu/mem/disk/gpu) for heartbeats.
    # Replaces the /proc-only collector that returned empty fields on
    # macOS / Windows / WSL. ``get_metrics()`` is the public flat-dict API.
    "scitex-resource>=0.2.0",
    # Canonical local-state directory helper (project-scope override +
    # auto runtime/ seed creation). Per scitex-python skill
    # 01_arch_06_local-state-directories.md.
    "scitex-config>=0.3.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
agent-container = ["scitex-agent-container>=0.8.0"]
telegram = ["claude-code-telegrammer>=0.2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "websockets>=12.0",
    "aiosqlite>=0.20",
    "deepeval>=1.0",
    # Quality-audit suite + tests/test_skills_quality.py imports it.
    # Without this dep CI fails with `ModuleNotFoundError: scitex_dev`.
    "scitex-dev",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]

[project.scripts]
scitex-orochi = "scitex_orochi._cli:main"
scitex-orochi-server = "scitex_orochi._server:main"
scitex-orochi-mcp = "scitex_orochi.mcp_server:main"

[project.entry-points."scitex_dev.skills"]
scitex-orochi = "scitex_orochi"

[project.entry-points."scitex_dev.docs"]
scitex-orochi = "scitex_orochi"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-orochi"
Repository = "https://github.com/ywatanabe1989/scitex-orochi"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_orochi", "hub", "orochi"]
# Explicit data-file inclusion. Hatch ships `.py` by default; everything
# else needs to be listed, or `pip install scitex-orochi` from PyPI ends
# up without the `_skills/` .md files and without the bundled TypeScript
# sidecar. todo#450 surfaced the _skills drift (8 files vs 44 in source)
# — listing `_skills/**` explicitly makes the wheel a faithful copy of
# the package tree for non-editable installs.
artifacts = [
    "_ts/**",
    "src/scitex_orochi/_skills/**",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "src/scitex_orochi/_ts/**",
    "src/scitex_orochi/_skills/**",
]
# Exclude developer-local virtualenvs and worktree caches so the sdist
# tarball stays portable. Without this, a stray ``.venv`` symlink (which
# points at an absolute path in the dev box's filesystem) makes the
# auto-publish workflow's ``python -m build`` step fail with
# ``tarfile.AbsoluteLinkError``.
exclude = [
    ".venv",
    ".venv/**",
    "venv",
    "venv/**",
    ".claude/worktrees/**",
    ".pytest_cache/**",
    "**/__pycache__/**",
    "GITIGNORED/**",
    "node_modules/**",
    "dist/**",
    "build/**",
    "*.egg-info/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "llm_eval: marks tests that use an LLM-as-judge (DeepEval) and require provider API keys (deselect with '-m \"not llm_eval\"')",
]

[tool.scitex-linter]
library_dirs = ["src", "tests", "hub", "orochi"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
